DS-515 fix .c-donate-tout__inner p on mobile

--- a/app/styles/_library/_objects.touts.scss
+++ b/app/styles/_library/_objects.touts.scss
@@ -65,6 +65,7 @@
 }
 .c-donate-tout__inner p {
   position: relative;
+  @include typeface(body, 6);
   @include media(">xlarge") {
     width: calc(65% - var(--space-3));
   }
